--- a/app/scss/components/_guide.scss
+++ b/app/scss/components/_guide.scss
@@ -32,7 +32,7 @@
   &--header {
     @include breakpoint-down(medium) {
       height: 100vh;
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
       visibility: hidden;
