--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -1,6 +1,8 @@
 @use '../abstracts/' as *;
 
 .header {
+  position: relative;
+
   &__container {
     width: min(100% - rem(32) * 2, rem(1110));
     margin-inline: auto;
